# Qme

./: .env.example  .gitignore  README.md  ResumeToolbar.js  pyproject.toml  requirements.txt  resume.module.scss
qme/: __init__.py  main.py  settings.py
qme/routers/: resume.py
qme/schemas/: resume.py
qme/services/: accounts.py  credits.py  cv_docx.py  cv_rewrite.py  jobs.py  points.py  resume_file_import.py  resume_sections.py
qme/static/components/: ResumeDataPane.tsx  ResumePage.tsx  ResumePreviewPane.tsx  ResumeToolbar.tsx
qme/static/css/: theme.css
qme/static/styles/: resume.module.scss
qme/static/types/: resume.ts
qme/templates/: account.html  base.html  cv.html  dream_job.html  index.html  job_detail.html  job_not_found.html  jobs.html  learn.html  login.html  register.html  reqme.html  reqme_public.html
