[project]
name = "qme"
version = "0.1.0"
description = "Qme — a jobs platform bridging recruiters and job seekers with learn-to-earn, AI CV tools, and shareable reQmes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Qme contributors" }]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["qme*"]

[tool.setuptools.package-data]
qme = ["templates/**/*.html", "static/**/*.css"]
